--- a/flappy-bird/game.html
+++ b/flappy-bird/game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flappy-bird</title>
+    <link rel="icon" href="images/bird.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/game.css">
 </head>
