--- a/flappy-bird/game.html
+++ b/flappy-bird/game.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Flappy-bird</title>
-    <link rel="icon" href="images/bird.png">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/game.css">
-</head>
-<body>
-<div id="game">
-    <div class="bird"></div>
-    <div class="start white">开始游戏</div>
-    <div class="score">0</div>
-    <div class="mark">
+    <link rel="icon" href="images/bird.png" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/game.css" />
+  </head>
+  <body>
+    <div id="game">
+      <div class="bird"></div>
+      <div class="start white">开始游戏</div>
+      <div class="score">0</div>
+      <div class="mark">
         <div class="end">
-            <div class="over">Game over</div>
-            <div class="result">Your Results:</div>
-            <div class="finnal-score">0</div>
-            <ul class="rank-list">
-
-            </ul>
-            <div class="reset">重新开始</div>
+          <div class="over">Game over</div>
+          <div class="result">Your Results:</div>
+          <div class="finnal-score">0</div>
+          <ul class="rank-list"></ul>
+          <div class="reset">重新开始</div>
         </div>
+      </div>
     </div>
-</div>
-<script src="js/myFunctions.js"></script>
-<script src="js/game.js"></script>
-</body>
+    <script src="js/myFunctions.js"></script>
+    <script src="js/game.js"></script>
+  </body>
 </html>
